# service/api/api-handler.go
@@ -14,52 +14,51 @@ func (rt *_router) Handler() http.Handler {
 	//login
 	rt.router.POST("/session", rt.doLogin)
 	//update username
-	rt.router.PUT("/user/:authenticatedUserId/update-username", rt.authWrapper(rt.setMyUserName))
+	rt.router.PUT("/user/:userId/update-username", rt.authWrapper(rt.setMyUserName))
 	//get profile page
-	rt.router.GET("/user/:authenticatedUserId/profile-page/:username", rt.authWrapper(rt.getUserProfile))
+	rt.router.GET("/user/:userId/profile-page/:username", rt.authWrapper(rt.getUserProfile))
 	//search profiles by username
-	rt.router.GET("/user/:authenticatedUserId/search/:username", rt.authWrapper(rt.searchUser))
+	rt.router.GET("/user/:userId/search/:username", rt.authWrapper(rt.searchUser))
 
 	// SOCIAL
 
 	//follow user
-	rt.router.PUT("/user/:authenticatedUserId/follow/:username", rt.authWrapper(rt.followUser))
+	rt.router.PUT("/user/:userId/follow/:username", rt.authWrapper(rt.followUser))
 	//unfollow user
-	rt.router.DELETE("/user/:authenticatedUserId/follow/:username", rt.authWrapper(rt.unfollowUser))
+	rt.router.DELETE("/user/:userId/follow/:username", rt.authWrapper(rt.unfollowUser))
 	//ban user
-	rt.router.PUT("/user/:authenticatedUserId/ban/:username", rt.authWrapper(rt.banUser))
+	rt.router.PUT("/user/:userId/ban/:username", rt.authWrapper(rt.banUser))
 	//unban user
-	rt.router.DELETE("/user/:authenticatedUserId/ban/:username", rt.authWrapper(rt.unbanUser))
+	rt.router.DELETE("/user/:userId/ban/:username", rt.authWrapper(rt.unbanUser))
 
 	//TODO DA FARE
 
 	// PHOTO INERACTION
 
 	//return the photos of the followed users
-	rt.router.GET("/user/:authenticatedUserId/photos/", rt.authWrapper(nil))
+	rt.router.GET("/user/:userId/photos/", rt.authWrapper(nil))
 	//post a new photo
-	rt.router.POST("/user/:authenticatedUserId/photos/", rt.authWrapper(rt.uploadPhoto))
+	rt.router.POST("/user/:userId/photos/", rt.authWrapper(rt.uploadPhoto))
 	//get a photo
-	rt.router.GET("/user/:authenticatedUserId/photos/:photoId/", rt.authWrapper(rt.getPhoto))
+	rt.router.GET("/user/:userId/photos/:photoId/", rt.authWrapper(rt.getPhoto))
 	//delete a photo
-	rt.router.DELETE("/user/:authenticatedUserId/photos/:photoId/", rt.authWrapper(rt.deletePhoto))
+	rt.router.DELETE("/user/:userId/photos/:photoId/", rt.authWrapper(rt.deletePhoto))
 
-	// TODO CAPIRE COME AGGIUSTARE IL PATH
-	////like a photo
-	//rt.router.PUT("/user/:username/photos/:photoIds/likes/:authenticatedUserId", rt.authWrapper(nil))
-	////unlike a photo
-	//rt.router.DELETE("/user/:username/photos/:photoIds/likes/:authenticatedUserId", rt.authWrapper(nil))
-	////get the comments of a photo
-	//rt.router.GET("/user/:username/photos/:photoIds/comments/owner/:authenticatedUserId", rt.authWrapper(nil))
-	////add a comment to a photo
-	//rt.router.POST("/user/:username/photos/:photoIds/comments/owner/:authenticatedUserId", rt.authWrapper(nil))
-	//
-	////COMMENTS
-	//
-	////get the comment of a photo
-	//rt.router.GET("/user/:username/photos/:photoIds/comments/:commentId", rt.authWrapper(nil))
-	////delete a comment
-	//rt.router.DELETE("/user/:username/photos/:photoIds/comments/:commentId", rt.authWrapper(nil))
+	//like a photo
+	rt.router.PUT("/user/:userId/photos/:photoId/likes/:authenticatedUserId", rt.authWrapper(nil))
+	//unlike a photo
+	rt.router.DELETE("/user/:userId/photos/:photoId/likes/:authenticatedUserId", rt.authWrapper(nil))
+	//get the comments of a photo
+	rt.router.GET("/user/:userId/photos/:photoId/comments/", rt.authWrapper(nil))
+	//add a comment to a photo
+	rt.router.POST("/user/:userId/photos/:photoId/comments/", rt.authWrapper(nil))
+
+	//COMMENTS
+
+	//get the comment of a photo
+	rt.router.GET("/user/:userId/photos/:photoId/comments/:commentId", rt.authWrapper(nil))
+	//delete a comment
+	rt.router.DELETE("/user/:userId/photos/:photoId/comments/:commentId", rt.authWrapper(nil))
 
 	return rt.router
 }
